feat: migration, add multitenancy  (#6)
* feat: migration

* feat: migration

* feat: add tenant tests

* test: clean up sonar code smells
